# long-float

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: LongFloat.h
src/: LongFloat.cpp
tests/: pi.cpp  test.cpp
